# Python_Kraken_Viewer

./: README.md  Valores.py  main.py  pyproject.toml
